# GuitarRackCraft

./: .gitignore  .gitmodules  README.md  build.gradle.kts  build.sh  gradle.properties  gradlew  plugin_descriptions.json  run.sh  settings.gradle.kts
.github/workflows/: build-deploy.yml  build-vst-full.yml  ci.yml  release-vst.yml
.patch-export/: system_base.c  system_mine.c
app/: build.gradle.kts  proguard-rules.pro
app/src/full/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xshm_stub.c
app/src/main/cpp/engine/: AudioEngine.cpp  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  OfflineProcessor.cpp  OfflineProcessor.h  RingBuffer.h
app/src/main/cpp/jni/: NativeBridge.cpp
app/src/main/cpp/plugin/: IPlugin.h  IPluginFactory.h  PluginChain.cpp  PluginChain.h  PluginRegistry.cpp  PluginRegistry.h  PluginUIGuard.cpp  PluginUIManager.cpp  PluginUIManager.h  StateSerializer.cpp  StateSerializer.h
app/src/main/cpp/plugin/lv2/: LV2Plugin.cpp  LV2Plugin.h  LV2PluginFactory.cpp  LV2PluginFactory.h  LV2PluginUI.cpp  LV2PluginUI.h  LV2Utils.cpp  LV2Utils.h  gx_ui_pedal_png_stub.c
app/src/main/cpp/utils/: TaskQueue.h  WavIO.cpp  WavIO.h
app/src/main/cpp/x11/: DisplayState.h  X11AtomStore.cpp  X11AtomStore.h  X11ConnectionHandler.cpp  X11ConnectionHandler.h  X11Framebuffer.cpp  X11Framebuffer.h  X11Log.h  X11NativeDisplay.cpp  X11NativeDisplay.h  X11PixmapStore.h  X11PropertyStore.cpp  X11PropertyStore.h  X11Protocol.h  X11WindowManager.cpp  X11WindowManager.h
brummer_pack/: build.gradle.kts
cmake/: CMakeLists.txt  CMakePresets.json  inject_arm64_ftz.cmake
cmake/modules/: AndroidNDK.cmake  BrummerPlugin.cmake  CopyModguiResources.cmake  ExternalBuild.cmake  GeneratePluginMetadata.cmake  InitSubmodules.cmake  LV2Compat.cmake  LV2PluginUtils.cmake  MesonCrossFile.cmake  SharedLibs.cmake  WatchSources.cmake
cmake/scripts/: aidax_full_configure.sh.in  aidax_full_sync.sh.in
cmake/targets/: aidax.cmake  aidax_full.cmake  collisiondrive.cmake  doubletracker.cmake  fatfrog.cmake  fftw3.cmake  gx_plugins.cmake  gxcabsim.cmake  impulseloader.cmake  lv2_libs.cmake  metadata.cmake  metaltone.cmake  modamptk.cmake  nam.cmake  neuralrack.cmake  plugin_uis.cmake  trunk_plugins.cmake  x11_sysroot.cmake  xdarkterror.cmake  xtinyterror.cmake
cmake/targets/aidax_dsp/: CMakeLists.txt
gxplugins_pack/: build.gradle.kts
neural_pack/: build.gradle.kts
tests/: CMakeLists.txt
tests/x11/: TestAtomStore.cpp  TestByteOrder.cpp  TestConnectionHandshake.cpp  TestConnectionReply.cpp  TestEventBuilder.cpp  TestFramebuffer.cpp  TestHelpers.h  TestPixmapStore.cpp  TestPropertyStore.cpp  TestWindowManager.cpp  TestWireGLX.cpp  TestWireImageOps.cpp  TestWireProtocol.cpp  TestXCBClient.cpp
tools/: generate_thumbnails.sh  lv2_screenshot.c  update_descriptions.sh
vsthost_lib/: .gitignore  README.md  build.gradle.kts
vsthost_lib/docs/: prebuilts-inventory.md  vst2-host-frame-migration.md
vsthost_lib/docs/ilok-pace-fex/: README.md
vsthost_lib/patches/dxvk/: 0001-d3d9-skip-redundant-D3DDEVINFO_RESOURCEMANAGER-typedef.patch  0002-adapter-gate-features-on-support.patch  0003-memory-log-vkAllocateMemory-result.patch  0004-adapter-skip-transform-feedback-adreno.patch  0005-adapter-gate-robustImageAccess2-on-base.patch  0006-memory-retry-alloc-adreno-transient.patch  0007-dxgi-output-default-colorimetry.patch  0008-util-sleep-skip-busywait-under-fex.patch
vsthost_lib/patches/fex/: README.md
vsthost_lib/patches/mesa/: 0001-zink-android-desktop-gl-via-turnip.patch  0002-turnip-icd-bionic-no-display-wsi.patch  0003-zink-accept-cpu-device.patch  0004-llvmpipe-malloc-device-memory-on-android.patch  README.md
vsthost_lib/patches/vst3-host/: 0001-veh-generalize-ik-editor-null-obj-12byte.patch
vsthost_lib/patches/vulkan-loader/: 0001-loader-enumerate-vk-khr-surface-software-only.patch
vsthost_lib/patches/wine/: 0002-fex-pivot-wine-patch-014-WM_MOUSEACTIVATE-for-top-le.patch  0003-fex-pivot-wine-patches-015-019-020-021.patch  0004-fex-pivot-wine-patch-022-synthetic-adapter-for-Andro.patch  0007-fex-pivot-uncommitted-working-tree.patch  0008-cmd-ver-windows-format.patch  0009-server-add-amd64-to-supported-machines-arm64.patch  0010-ntdll-spoof-amd64-native-machine-arm64.patch  0012-opengl32-handle-opengl-es-version-prefix.patch  0025-wineandroid-enable-build.patch  (+46 more)
vsthost_lib/scripts/: apply-wine-patches.sh  bootstrap-gradle.sh  build-adrenotools.sh  build-all.sh  build-android-libs.sh  build-dxvk.sh  build-fex-pe.sh  build-gnutls-android.sh  build-lavapipe-android.sh  build-libdrm-android.sh  build-llvm-android.sh  build-llvm-stub.sh  build-mesa-zink.sh  build-symbol-map.sh  build-turnip-hal.sh  build-turnip-icd.sh  build-uihost-stub.sh  build-vst-host.sh  build-vst3-host.sh  build-vulkan-loader.sh  build-wine-android.sh  build-wine-pe.sh  fetch-llvm-source.sh  fetch-mesa-zink-libs.sh  fetch-turnip-libs.sh  fetch-x11-libs.sh  pack-wine-fex.py  setup-fex-pivot.sh  snapshot-vst-state.sh  triage-vst-log.py
vsthost_lib/src/main/cpp/: CMakeLists.txt  jni_runtime.cpp  jni_x11.cpp
vsthost_lib/src/main/cpp/ahbspike/: AhbChannelTest.cpp  AhbChannelTest.h  AhbSpike.cpp  AhbSpike.h
vsthost_lib/src/main/cpp/ipc/: PickerChannel.cpp  PickerChannel.h  SharedRing.cpp  SharedRing.h  SpscRing.h
vsthost_lib/src/main/cpp/launcher/: WineHostProcess.cpp  WineHostProcess.h
vsthost_lib/src/main/cpp/mesashim/: vulkan_turnip_shim.c
vsthost_lib/src/main/cpp/plugin/: PluginUIGuard.h
vsthost_lib/src/main/cpp/util/: PeExports.cpp  PeExports.h  log.h
vsthost_lib/src/main/cpp/utils/: ThreadUtils.h
vsthost_lib/src/main/cpp/vst/: VstFactory.cpp  VstFactory.h  WineVstPlugin.cpp  WineVstPlugin.h
vsthost_lib/src/main/cpp/x11/: AhbChannelProtocol.h  AhbTexture.cpp  AhbTexture.h  X11AtomStore.cpp  X11AtomStore.h  X11ByteOrder.h  X11ConnectionHandler.cpp  X11ConnectionHandler.h  X11EventBuilder.h  X11NativeDisplay.cpp  X11NativeDisplay.h  X11PixmapStore.cpp  X11Protocol.h  X11RenderBackend.h  X11WindowManager.cpp  X11WindowManager.h  X11Worker.cpp  X11Worker.h
(+140 files in other folders)
